# ci-sanity

./: .ci-sanity.yml  INSTALL.md  README.md  pyproject.toml  quickstart.sh  setup.py
ci-sanity/src/: config.py  models.py
ci-sanity/src/ci_sanity/: __init__.py  checker.py  cli.py  config.py  models.py
ci-sanity/src/ci_sanity/rules/: __init__.py  action_version.py  runner_compat.py  secrets.py  step_order.py  yaml_syntax.py
tests/: test_config.py  test_setup.py
